--- a/index.html
+++ b/index.html
@@ -29,17 +29,22 @@
     </div>
     <!-- Main container -->
     <div class="main-cont">
-        <!-- <div class="ticket-cont">
-            <div class="ticket-color"></div>
-            <div class="ticket-id">#b5fsgj598</div>
-            <div class="task-area">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab omnis cum quod saepe perspiciatis aut, vero doloremque doloribus quis neque.</div>
-        </div>
 
-        <div class="ticket-cont">
+        <!--  <div class="ticket-cont">
             <div class="ticket-color"></div>
             <div class="ticket-id">#b5fsgj598</div>
             <div class="task-area">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab omnis cum quod saepe perspiciatis aut, vero doloremque doloribus quis neque.</div>
         </div> -->
+
+        <!-- <div class="ticket-cont">
+            <div class="ticket-color lightpink"></div>
+            <div class="ticket-id">#b5fsgj598</div>
+            <div class="task-area">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab omnis cum quod saepe perspiciatis aut, vero doloremque doloribus quis neque.</div>
+            <div class="ticket-lock">
+                <i class="fa-solid fa-lock"></i>
+            </div>
+        </div>  -->
+        
 
     </div>
     <div class="modal-cont">
@@ -53,7 +58,7 @@
             <div class="black priority-color border"></div>
         </div>
     </div>
-
+    <script src="https://unpkg.com/shortid-dist@1.0.5/dist/shortid-2.2.13.min.js"></script>
     <script src="./script.js"></script>
 </body>
 
